--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 :root{
     --primary: #1aac83;
     --borrowed: #2a0fdc78;
@@ -213,3 +214,42 @@ div .error{
 /* .del{
     margin-right: 5px;
 } */
+
+/* .reglinks{
+    justify-content: space-between;
+} */
+.loginlink{
+    margin-left: 20px;
+    color: #000;
+    text-decoration: none;
+    font-size: 1.2em;
+    border-bottom: 8px solid var(--primary);
+}
+.signuplink{
+    color: #000;
+    text-decoration: none;
+    font-size: 1.2em;
+    border-bottom: 8px solid var(--primary);
+}
+.useremail{
+    margin-right: 50px;
+    font-weight: 500;
+}
+.logoutbut{
+    background: #e21f1f;
+    padding: 10px;
+    border-radius: 4px;
+    background: #fff;
+    outline: none;
+    border: 3px solid var(--primary);
+    font-size: 1.1em;
+}
+.searchbut{
+    padding: 10px;
+    margin-bottom: 15px;
+    border-radius: 8px;
+    font-size: 15px;
+}
+.single-book a{
+    margin-top: 10px !important;
+}
